--- a/tasks-app/docker-compose.yml
+++ b/tasks-app/docker-compose.yml
@@ -30,10 +30,6 @@ services:
       PORT: 8080
     ports:
       - "8080:8080"
-    volumes:
-      - ./backend:/app
-      - /app/node_modules
-    command: npm start
     depends_on:
       database:
         condition: service_healthy
@@ -43,8 +39,10 @@ services:
   frontend:
     build: ./frontend
     container_name: tasks-frontend
+    environment:
+      - REACT_APP_API_URL=http://localhost:8080
     ports:
-      - "3000:80"
+      - "3000:3000"
     depends_on:
       - backend
     networks:
