--- a/tasks-app/docker-compose.yml
+++ b/tasks-app/docker-compose.yml
@@ -22,8 +22,8 @@ services:
     build: ./backend
     container_name: tasks-backend
     environment:
-      DB_USER: postgres
-      DB_PWD: postgres
+      DB_USERNAME: postgres
+      DB_PASSWORD: postgres
       DB_HOST: database
       DB_PORT: 5432
       DB_NAME: tasks
