--- a/tasks-app/frontend/buildspec.yml
+++ b/tasks-app/frontend/buildspec.yml
@@ -63,8 +63,9 @@ phases:
 artifacts:
   files:
     - '**/*'
-  base-directory: frontend/build
+  base-directory: tasks-app/frontend/build
   name: frontend-build-$(date +%Y-%m-%d-%H-%M-%S)
+  discard-paths: no
 
 cache:
   paths:
