--- a/tasks-app/frontend/buildspec.yml
+++ b/tasks-app/frontend/buildspec.yml
@@ -12,53 +12,23 @@ phases:
   pre_build:
     commands:
       - echo "Build started on $(date)"
-      - echo "Checking for frontend changes..."
-      - |
-        if [ -n "$CODEBUILD_WEBHOOK_TRIGGER" ]; then
-          CHANGED_FILES=$(git diff --name-only HEAD~1 HEAD || echo "tasks-app/frontend/")
-        else
-          CHANGED_FILES="tasks-app/frontend/"
-        fi
-      - echo "Changed files - $CHANGED_FILES"
-      - |
-        if echo "$CHANGED_FILES" | grep -q "^tasks-app/frontend/"; then
-          echo "Frontend changes detected, proceeding with build..."
-          export SHOULD_BUILD="true"
-        else
-          echo "No frontend changes detected, skipping build..."
-          export SHOULD_BUILD="false"
-        fi
-      - echo "SHOULD_BUILD=$SHOULD_BUILD"
-      - |
-        if [ "$SHOULD_BUILD" = "true" ]; then
-          echo "Installing dependencies..."
-          cd tasks-app/frontend
-          npm ci --only=production
-          echo "Node version:" && node --version
-          echo "NPM version:" && npm --version
-        fi
+      - echo "Installing dependencies..."
+      - cd tasks-app/frontend
+      - npm ci --only=production
+      - echo "Node version:" && node --version
+      - echo "NPM version:" && npm --version
 
   build:
     commands:
-      - |
-        if [ "$SHOULD_BUILD" = "true" ]; then
-          echo "Building React application..."
-          npm run build
-          echo "Build completed on $(date)"
-        else
-          echo "Skipping build phase..."
-        fi
+      - echo "Building React application..."
+      - npm run build
+      - echo "Build completed on $(date)"
 
   post_build:
     commands:
-      - |
-        if [ "$SHOULD_BUILD" = "true" ]; then
-          echo "Deploying to S3..."
-          aws s3 sync build/ s3://$S3_BUCKET_NAME --delete
-          echo "Frontend deployment completed!"
-        else
-          echo "No deployment needed."
-        fi
+      - echo "Deploying to S3..."
+      - aws s3 sync build/ s3://$S3_BUCKET_NAME --delete
+      - echo "Frontend deployment completed!"
 
 artifacts:
   files:
