--- a/tasks-app/frontend/buildspec.yml
+++ b/tasks-app/frontend/buildspec.yml
@@ -14,7 +14,7 @@ phases:
       - echo "Build started on $(date)"
       - echo "Installing dependencies..."
       - cd tasks-app/frontend
-      - npm ci
+      - npm install
       - echo "Node version:" && node --version
       - echo "NPM version:" && npm --version
 
