fix: add NODE_OPTIONS for OpenSSL legacy provider compatibility

--- a/tasks-app/frontend/buildspec.yml
+++ b/tasks-app/frontend/buildspec.yml
@@ -46,5 +46,6 @@ env:
     NODE_ENV: production
     GENERATE_SOURCEMAP: "false"
     CI: "false"
+    NODE_OPTIONS: "--openssl-legacy-provider"
   parameter-store:
     S3_BUCKET_NAME: /tasks-app/frontend/s3-bucket
