--- a/tasks-app/frontend/buildspec.yml
+++ b/tasks-app/frontend/buildspec.yml
@@ -21,6 +21,7 @@ phases:
   build:
     commands:
       - echo "Building React application..."
+      - export NODE_OPTIONS=--openssl-legacy-provider
       - npm run build
       - echo "Build completed on $(date)"
 
