--- a/tasks-app/frontend/buildspec.yml
+++ b/tasks-app/frontend/buildspec.yml
@@ -9,26 +9,29 @@ phases:
     commands:
       - echo "Build started on $(date)"
       - |
-        # Check if there are frontend changes
-        if [ -n "$CODEBUILD_WEBHOOK_TRIGGER" ]; then
-          CHANGED_FILES=$(git diff --name-only HEAD~1 HEAD 2>/dev/null || echo "")
-          if echo "$CHANGED_FILES" | grep -q "^tasks-app/frontend/"; then
-            echo "Frontend changes detected"
-            export SHOULD_BUILD="true"
-          else
-            echo "No frontend changes detected, skipping build"
-            export SHOULD_BUILD="false"
-          fi
-        else
-          echo "Manual trigger or first build, building everything"
+        CHANGED_FILES=$(git diff --name-only HEAD~1 HEAD 2>/dev/null)
+
+        if [ -z "$CHANGED_FILES" ]; then
+          echo "Could not detect changed files, building to be safe"
           export SHOULD_BUILD="true"
+        elif echo "$CHANGED_FILES" | grep -q "^tasks-app/frontend/"; then
+          echo "Frontend changes detected"
+          export SHOULD_BUILD="true"
+        else
+          echo "Changes detected, but not in frontend. Skipping build"
+          export SHOULD_BUILD="false"
         fi
+
       - echo "SHOULD_BUILD=$SHOULD_BUILD"
       - |
         if [ "$SHOULD_BUILD" = "true" ]; then
           echo "Getting API URL from SSM..."
-          export REACT_APP_API_URL=$(aws ssm get-parameter --name /tasks-app/prod/api-url --query Parameter.Value --output text --region us-east-1)
-          echo "API URL: $REACT_APP_API_URL"
+          export REACT_APP_API_URL=$(aws ssm get-parameter \
+            --name /tasks-app/prod/api-url \
+            --query Parameter.Value \
+            --output text \
+            --region us-east-1)
+
           echo "Installing dependencies..."
           cd tasks-app/frontend
           npm install
