--- a/tasks-app/backend/buildspec.yml
+++ b/tasks-app/backend/buildspec.yml
@@ -4,65 +4,34 @@ phases:
   pre_build:
     commands:
       - echo "Build started on $(date)"
-      - |
-        # Fetch previous commit for comparison
-        git fetch --depth=2 origin 2>/dev/null || true
-        CHANGED_FILES=$(git diff --name-only HEAD~1 HEAD 2>/dev/null)
-
-        if [ -z "$CHANGED_FILES" ]; then
-          echo "Could not detect changed files, building to be safe"
-          export SHOULD_BUILD="true"
-        elif echo "$CHANGED_FILES" | grep -q "^tasks-app/backend/"; then
-          echo "Backend changes detected"
-          export SHOULD_BUILD="true"
-        else
-          echo "Changes detected, but not in backend. Skipping build"
-          export SHOULD_BUILD="false"
-        fi
-
-      - echo "SHOULD_BUILD=$SHOULD_BUILD"
-      - |
-        if [ "$SHOULD_BUILD" = "true" ]; then
-          echo "Logging in to Amazon ECR..."
-          aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $ECR_REPOSITORY_URI
-          COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-          export IMAGE_TAG=${COMMIT_HASH:=latest}
-          echo "Image tag: $IMAGE_TAG"
-        fi
+      - echo "Logging in to Amazon ECR..."
+      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $ECR_REPOSITORY_URI
+      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      - export IMAGE_TAG=${COMMIT_HASH:=latest}
+      - echo "Image tag: $IMAGE_TAG"
 
   build:
     commands:
-      - |
-        if [ "$SHOULD_BUILD" = "true" ]; then
-          echo "Building Docker image..."
-          cd tasks-app/backend
-          docker build -t $ECR_REPOSITORY_URI:latest .
-          docker tag $ECR_REPOSITORY_URI:latest $ECR_REPOSITORY_URI:$IMAGE_TAG
-          echo "Build completed on $(date)"
-        else
-          echo "Skipping build"
-        fi
+      - echo "Building Docker image..."
+      - cd tasks-app/backend
+      - docker build -t $ECR_REPOSITORY_URI:latest .
+      - docker tag $ECR_REPOSITORY_URI:latest $ECR_REPOSITORY_URI:$IMAGE_TAG
+      - echo "Build completed on $(date)"
 
   post_build:
     commands:
-      - |
-        if [ "$SHOULD_BUILD" = "true" ]; then
-          echo "Pushing images to ECR..."
-          docker push $ECR_REPOSITORY_URI:latest
-          docker push $ECR_REPOSITORY_URI:$IMAGE_TAG
-          echo "Creating new task definition..."
-          sed "s|IMAGE_TAG|$IMAGE_TAG|g" aws/task-definition.json > /tmp/task-def.json
-          NEW_TASK_DEF_ARN=$(aws ecs register-task-definition --cli-input-json file:///tmp/task-def.json --region $AWS_DEFAULT_REGION --query 'taskDefinition.taskDefinitionArn' --output text)
-          echo "New task definition: $NEW_TASK_DEF_ARN"
-          echo "Updating ECS service..."
-          aws ecs update-service --cluster $ECS_CLUSTER_NAME --service $ECS_SERVICE_NAME --task-definition $NEW_TASK_DEF_ARN --region $AWS_DEFAULT_REGION
-          cd ../..
-          printf '[{"name":"tasks","imageUri":"%s"}]' $ECR_REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
-          echo "Backend deployment completed!"
-        else
-          echo "Skipping deployment"
-          printf '[]' > imagedefinitions.json
-        fi
+      - echo "Pushing images to ECR..."
+      - docker push $ECR_REPOSITORY_URI:latest
+      - docker push $ECR_REPOSITORY_URI:$IMAGE_TAG
+      - echo "Creating new task definition..."
+      - sed "s|IMAGE_TAG|$IMAGE_TAG|g" aws/task-definition.json > /tmp/task-def.json
+      - NEW_TASK_DEF_ARN=$(aws ecs register-task-definition --cli-input-json file:///tmp/task-def.json --region $AWS_DEFAULT_REGION --query 'taskDefinition.taskDefinitionArn' --output text)
+      - echo "New task definition: $NEW_TASK_DEF_ARN"
+      - echo "Updating ECS service..."
+      - aws ecs update-service --cluster $ECS_CLUSTER_NAME --service $ECS_SERVICE_NAME --task-definition $NEW_TASK_DEF_ARN --region $AWS_DEFAULT_REGION
+      - cd ../..
+      - printf '[{"name":"tasks","imageUri":"%s"}]' $ECR_REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+      - echo "Backend deployment completed!"
 
 artifacts:
   files:
