--- a/tasks-app/frontend/buildspec.yml
+++ b/tasks-app/frontend/buildspec.yml
@@ -10,7 +10,7 @@ phases:
       - echo "Build started on $(date)"
       - echo "Getting API URL from SSM..."
       - export REACT_APP_API_URL=$(aws ssm get-parameter --name /tasks-app/prod/api-url --query Parameter.Value --output text --region us-east-1)
-      - echo "API URL: $REACT_APP_API_URL"
+      - echo "API URL - $REACT_APP_API_URL"
       - echo "Installing dependencies..."
       - cd tasks-app/frontend
       - npm install
