--- a/tasks-app/backend/buildspec.yml
+++ b/tasks-app/backend/buildspec.yml
@@ -8,7 +8,7 @@ phases:
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $ECR_REPOSITORY_URI
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - export IMAGE_TAG=${COMMIT_HASH:=latest}
-      - echo "Image tag: $IMAGE_TAG"
+      - echo "Image tag - $IMAGE_TAG"
 
   build:
     commands:
@@ -26,7 +26,7 @@ phases:
       - echo "Creating new task definition..."
       - sed "s|IMAGE_TAG|$IMAGE_TAG|g" aws/task-definition.json > /tmp/task-def.json
       - NEW_TASK_DEF_ARN=$(aws ecs register-task-definition --cli-input-json file:///tmp/task-def.json --region $AWS_DEFAULT_REGION --query 'taskDefinition.taskDefinitionArn' --output text)
-      - echo "New task definition: $NEW_TASK_DEF_ARN"
+      - echo "New task definition - $NEW_TASK_DEF_ARN"
       - echo "Updating ECS service..."
       - aws ecs update-service --cluster $ECS_CLUSTER_NAME --service $ECS_SERVICE_NAME --task-definition $NEW_TASK_DEF_ARN --region $AWS_DEFAULT_REGION
       - cd ../..
